<resources>
    <string name="app_name">ไทย-สันสคริปท์</string>

   <string name="font">font/Sri Sury Wongse.otf</string>

    <string name="menu_main_page">หน้าหลัก</string>
    <string name="menu_translate">ปริวรรต</string>
    <string name="menu_ex_translate">ตัวอย่างการปริวรรต</string>
    <string name="menu_item_article">บทความ</string>
    <string name="menu_sanskrit_dictionary_tha">พจนานุกรมสันสกฤต-ไทย</string>
    <string name="chats">chats</string>
    <string name="calls">calls</string>
    <string name="contacts">contacts</string>
    <string name="settings">settings</string>
    <string name="menu_additional">เพิ่มเติม</string>
    <string name="title_page_one">การทำงาน</string>
    <string name="title_detail_page_one">"     ไทย-สันสคริปท์ เป็นโปรแกรมช่วยในการปริวรรตอักษร จาก โรมัน-สันสกฤต มาเป็น ไทย-สันสกฤต ตามมาตรฐาน International Alphabet of Sanskrit Transliteration (IAST)"</string>
    <string name="title_sub_detail_page_one">"     ภาษาสันสกฤตมีพัฒนาการมาจาก ภาษาพระเวท ที่ปรากฏในคัมภีร์ฤคเวท  เมื่อราว 1,200 ปีก่อน ค.ศ. อันเป็นบทสวดสรรเสริญพระเจ้าในลัทธิพราหมณ์ในยุคต้น ๆ ภาษาพระเวทดั้งเดิมยังมิได้มีการวางกฎเกณฑ์ให้เป็นระเบียบรัดกุมและสละสลวย และมีหลักทางไวยากรณ์อย่างกว้าง ๆ"</string>
    <string name="title_page_two">พื้นฐานงาน</string>
    <string name="title_detail_page_two">"     ไทย-สันสคริปท์ ทำงานอยู่บนพื้นฐานงานโปรแกรม SANSCRIPT ที่  learnsanskrit.org ซึ่งจะปริวรรตอักษรอินเดียชนิดต่างและอักษรโรมันมาตรฐานต่างๆ ให้เป็น อักษรโรมันมาตรฐาน IAST"</string>
    <string name="title_sub_detail_page_two">"     ราว 57 ปีก่อน พ.ศ. พราหมณ์ชื่อ \"ปาณินิ\" ชาวแคว้นคันธาระ ท่านเห็นว่าภาษาสันสกฤตแบบพระเวทนั้นมีภาษาถิ่นปนเข้ามา หากไม่เขียนไวยากรณ์ที่เป็นระเบียบแบบแผนไว้จะคละกับภาษาถิ่น ปาณินิได้ศึกษาและจัดเรียบเรียงตำราไวยากรณ์ขึ้น 8 บท ชื่อว่า \"อัษฏาธยายี\"  ภาษาที่ปรับปรุงใหม่นี้เรียกว่า \"ตันติสันสกฤต\" หรือ สันสกฤตแบบแผน วรรณคดีสันสกฤตแบบแผนที่สำคัญและเป็นที่รู้จักมากคือ มหาภารตะ และ รามายณะ"</string>
    <string name="title_page_three">ผลลัพท์และการตรวจทาน</string>
    <string name="title_detail_page_three">"     ไทย-สันสคริปท์ เป็นแต่เพียงเครื่องมือช่วยในการปริวรรตเท่านั้น ผลลัพท์ที่ได้อาจมีบางส่วนที่ยังผิดพลาดอยู่ ควรตรวจทานอีกรอบก่อนใช้งานจริง ทั้งนี้โปรแกรมมีตารางเปรียบเทียบผลลัพท์ ท่านสามารถตรวจทานได้อย่างง่ายดาย"</string>
    <string name="title_sub_detail_page_three">"     ภาษาสันสกฤตอีกสาขาหนึ่ง เรียกว่า ภาษาสันสกฤตผสม หรือ ภาษาสันสกฤตผสมในพุทธศาสนา เป็นภาษาสันสกฤตยุคหลังถัดจากภาษาสันสกฤตแบบแผน พบในคัมภีร์ทางพระพุทธศาสนาทั้งในนิกายสรวาสติวาทและพระพุทธศาสนาฝ่ายมหายาน ผู้เชี่ยวชาญภาษาสันสกฤตสาขานี้ที่มีชื่อเสียงมากท่านหนึ่งเป็นที่รู้จักทั้งในอินเดียและจีน คือ พระภิกษุชาวจีนชื่อ พระเสวียนจั้ง หรือในชื่อที่ชาวไทยเรียกว่า พระถังซัมจั๋ง"</string>
    <string name="url_image_one">http://www.thai-sanscript.com/inc/images/slider/bg1.jpg</string>
    <string name="url_image_two">http://www.thai-sanscript.com/inc/images/slider/bg2.jpg</string>
    <string name="url_image_three">http://www.thai-sanscript.com/inc/images/slider/bg3.jpg</string>
    <string name="usage_policy">นโยบายการใช้งาน</string>
    <string name="menu_more">เพิ่มเติม</string>
    <string name="title_diamond">สร้างคุณค่า</string>
    <string name="detail_diamond">สร้างคุณค่าให้กับเอกสารเหล่านั้น สำหรับผู้ที่สนใจที่ไม่ถนัดการอ่านอักษรเทวนาครีและโรมัน</string>
    <string name="tv_title_plane">ปริวรรตอย่างรวดเร็ว</string>
    <string name="tv_sub_title_plane">จากเดิมที่ใช้เวลาเป็นวันในการปริวรรต ต่อไปนี้ ง่ายๆ เพียงคลิกเดียว ในไม่กี่วินาที</string>
    <string name="tv_title_graduation">สนับสนุนการศึกษา</string>
    <string name="tv_sub_detail_graduation">เป็นเครืองมือหนึ่งในช่วยการศึกษาค้นคว้าภาษาสันสกฤตในส่วนของการปริวรรต</string>
    <string name="title_users">ไม่สงวนลิขสิทธิ์</string>
    <string name="tv_title_detail_user">ไม่สงวนลิขสิทธิ์ ผลการปริวรรตถือเป็นผลงานของทุกคน ไม่ต้องอ้างอิงหรือนำไปใช้เพื่อการค้าได้</string>
    <string name="title_cc">ซอฟต์แวร์โอเพนซอร์ส</string>
    <string name="title_detail_cc">อนุญาตให้ใช้ได้ตามสัญญาอนุญาตของครีเอทีฟคอมมอนส์แบบ</string>
    <string name="sub_usage_policy">ปัจจุบันเอกสารภาษาสันสกฤต ทั้งอักษรเทวนาครีและโรมาไนซ์ มีอยู่อย่างมากมายในอินเตอร์เน็ต ไทย-สันสคริปท์จะช่วย</string>
    <string name="title_program_features">ลักษณะงาน</string>
    <string name="sub_title_program_features">"   เป็นโปรแกรมช่วยในการปริวรรตอักษร จาก โรมัน-สันสกฤต มาเป็น ไทย-สันสกฤต ตามรูปแบบการปริวรรต International Alphabet of Sanskrit Transliteration (IAST) โดยมีการปริวรรต 2 รูปแบบ"</string>
    <string name="program_feature_title_one">1. ปริวรรตอักษรไทยแบบคงรูป(แบบแผน)</string>
    <string name="program_features_detail_one">"   คือการ ปริวรรตอักษรแบบตรงตามรูปศัพท์เดิมโดยใช้เครื่องหมายอื่นๆ ร่วมกำกับด้วยเพื่อให้ถอดกลับเป็นอักษรโรมันหรืออักษรเทวนาครีได้ถูกต้อง คือการ ปริวรรตอักษรแบบตรงตามรูปศัพท์เดิมโดยใช้เครื่องหมายอื่นๆร่วมกำกับด้วย เพื่อให้ถอดกลับเป็นอักษรโรมันหรืออักษรเทวนาครีได้ถูกต้อง"</string>
    <string name="program_features_two_title">2.ปริวรรตอักษรแบบปรับรูป(ทั่วไป)</string>
    <string name="program_features_two_detail">"   โดยปรับให้เข้ากับอักขรวิธีไทย เพื่อให้รูปคำกลมกลืนกับภาษาไทย เพื่อความสะดวกในการอ่านสำหรับบุคคลทั่วไป แม้รูปแบบนี้จะใกล้เคียงกับการถอดเสียง (transcription) แต่การปริวรรตรูปแบบนี้ไม่ใช่การถอดเสียง ผู้ศึกษาควรศึกษาการออกเสียงเพิ่มเติม เพราะพยัญชนะจากการปริวรรตบางตัวออกเสียงไม่ตรงมาตรา"</string>
    <string name="title_scope_of_work_1">อาจมีข้อผิดพลาดจากพื้นฐานงาน</string>
    <string name="detail_scope_of_work_1">โปรแกรมนี้จะทำการพัฒนาเพียงการปริวรรตภาษาสันสกฤตแบบอักษรโรมันมาตรฐาน (IAST) เท่านั้น เนืองจากมีชุดไลบรารี่ ฟังก์ชันบางส่วนอยู่บนพื้นฐานงาน SANSCRIPT ที่ http://learnsanskrit.org ซึ่งชุดไลบรารี่นี้จะทำปริวรรตภาษาสันสกฤตแบบอักษรอินเดียชนิดต่างและอักษรโรมันมาตรฐานต่างๆ และอาจมีข้อผิดพลาดในการปริวรรตแบบอักษรอินเดียชนิดต่างและอักษรโรมันมาตรฐาน ควรตรวจทานก่อนใช้งาน</string>
    <string name="title_scope_of_work_2">ขอบเขตการปริวรรตอักษร</string>
    <string name="detail_scope_of_work_2">ทำการปริวรรตอักษรภาษาสันสกฤตจาก แบบอักษรโรมันมาตรฐาน IAST เป็น อักษรไทยในรูปแบบทั่วไป(แบบปรับรูป) และอักษรไทยในรูปแบบแบบแผน(แบบคงรูป)</string>
    <string name="title_scope_of_work_3">ขอบเขตการปริวรรตอักษรแบบย้อนกลับ</string>
    <string name="detail_scope_of_work_3">ทำการปริวรรตอักษรภาษาสันสกฤตจาก อักษรไทยในรูปแบบแบบแผน(แบบคงรูป) เป็น แบบอักษรโรมันมาตรฐาน IAST แต่ไม่จะไม่ทำการปริวรรตอักษรภาษาสันสกฤตจาก อักษรไทยในรูปแบบทั่วไป(แบบปรับรูป) เป็น แบบอักษรโรมันมาตรฐาน IAST</string>

    <string name="translate_sub_title">"   เมื่อคุณเลือกชนิดตัวอักษรแล้ว คุณสามารถดูตารางเปรียบเทียบการปริวรรตอักษรด้านล่าง [ดูตารางเปรียบเทียบอักษร]
เลือกตัวอักษรต้นฉบับ กรอกอักษรที่เป็นชนิดตัวอักษรที่เลือกไว้ แล้วเลือกตัวอักษรเปรียบเทียบอื่นๆ จากนั้น กดปุ่ม "ปริวรรต เป็น ไทย-สันสกฤต" เพื่อดูผลลัพธ์"</string>
    <string name="translate_title">เลือกชนิดตัวอักษรที่จะทำการปริวรรต</string>
    <string name="drop_down_name_uae">อุษาคเนย์</string>
    <string name="drop_down_name_thai_traditional">ไทย-คงรูป(แบบแผน)</string>
    <string name="drop_down_name_myanmar">พม่า (က)</string>
    <string name="drop_down_name_india">อินเดีย</string>
    <string name="drop_down_name_devanagari">เทวนาครี (अ)</string>
    <string name="drop_down_name_bengali">เบงกาลี (অ)</string>
    <string name="drop_down_name_kurum">คุรมุขี (ਅ)</string>
    <string name="drop_down_name_gujarati">คุชราตี (અ)</string>
    <string name="drop_down_name_oriya">โอริยา (ଅ)</string>
    <string name="drop_down_name_tamil">ทมิฬ (அ)</string>
    <string name="drop_down_name_telugu">เตลูกู (అ)</string>
    <string name="drop_down_name_kannada">กันนาดา (ಅ)</string>
    <string name="drop_down_name_malayalam">มาลายัม (അ)</string>
    <string name="drop_down_name_roman">โรมัน</string>
    <string name="drop_down_name_roman_iast">โรมัน IAST</string>
    <string name="drop_down_name_roman_kolkata">โรมัน Kolkata</string>
    <string name="drop_down_name_roman_itrans">โรมัน ITRANS</string>
    <string name="drop_down_name_roman_harvard_kyoto">โรมัน Harvard-Kyoto</string>
    <string name="drop_down_name_roman_slp">โรมัน SLP</string>
    <string name="drop_down_name_roman_test">โรมัน ทดสอบ</string>
    <string name="drop_down_value_thai">thai</string>
    <string name="drop_down_value_burmese">burmese</string>
    <string name="drop_down_value_devanagari">devanagari</string>
    <string name="drop_down_value_bengali">bengali</string>
    <string name="drop_down_value_gurmukhi">gurmukhi</string>
    <string name="drop_down_value_gujarati">gujarati</string>
    <string name="drop_down_value_oriya">oriya</string>
    <string name="drop_down_value_tamil">tamil</string>
    <string name="drop_down_value_telugu">telugu</string>
    <string name="drop_down_value_kannada">kannada</string>
    <string name="drop_down_value_malayalam">malayalam</string>
    <string name="drop_down_value_roman_iast">iast</string>
    <string name="drop_down_value_kolkata">kolkata</string>
    <string name="drop_down_value_roman_itrans">itrans</string>
    <string name="drop_down_value_roman_harvard_kyoto">hk</string>
    <string name="drop_down_value_roman_slp">slp1</string>
    <string name="drop_down_value_roman_iast_test">iasttest</string>
    <string name="original_text">ตัวอักษรต้นฉบับ</string>
    <string name="other_comparative_characters">ตัวอักษรเปรียบเทียบอื่นๆ</string>
    <string name="language_text">ข้อความภาษา</string>
    <string name="btn_exchange">ปริวรรต เป็น ไทย-สันสกฤต</string>
</resources>
